k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stormveil-service
spec:
  type: ClusterIP
  selector:
    app: stormveil
  ports:
  - port: 80
    targetPort: 3000
